# darktable-auto-exporter

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
darktable_auto_exporter/: __main__.py  exporter.py  settings.py  xmp_manager.py
