[project]
name = "darktable-auto-exporter"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Mees",email = "tim83@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[project.scripts]
darktable-auto-exporter = 'darktable_auto_exporter.__main__:main'



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
pre-commit = "^4.1.0"

